Add popup overlay to block interaction

--- a/style/popup.css
+++ b/style/popup.css
@@ -1,3 +1,12 @@
+.overlay {
+  position: fixed;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  top: 0;
+  z-index: 90;
+  background-color: rgba(0, 0, 0, 0.3);
+}
 .popup {
   -webkit-transition-timing-function: ease-out;
           transition-timing-function: ease-out;
