--- a/files/talug/style.css
+++ b/files/talug/style.css
@@ -22,16 +22,28 @@ body {
 nav ul {
   list-style-type: none;
   padding: 0;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   border-bottom: 1px solid skyblue;
 }
 nav li {
   padding: 0.5em;
   margin-bottom: -1px;
   width: 10rem;
-  flex: 0 0 auto;
+  -webkit-box-flex: 0;
+  -webkit-flex: 0 0 auto;
+      -ms-flex: 0 0 auto;
+          flex: 0 0 auto;
   border-bottom: 1px solid transparent;
 }
 nav li.active {
